--- a/app/public/home.html
+++ b/app/public/home.html
@@ -18,11 +18,24 @@
         <div class="card-body">
             <h4 class="card-title">Title</h4>
             <p class="card-text">Text</p>
+
+
+            <div class="text-center">
+                <a href="/survey"><button class="btn btn-lg btn-success">Take Survey</button></a>
+              </div>
+
         </div>
         <div class="card-footer text-muted">
-            Footer
+                <a href="/api/friends">Discover Friends API</a>
+                <span>|</span>
+                <a href="https://github.com/PENA5/friend-finder">GitHub Repo</a>
+        
         </div>
     </div>
+
+    <footer>
+
+    </footer>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
