--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,12 +12,14 @@
   <body>
 
     <div class="card">
-        <div class="card-header">
-            Find your Next Friend
+        <div class="card-header" text="center">
+            Find A Friend
         </div>
         <div class="card-body">
-            <h4 class="card-title">Title</h4>
-            <p class="card-text">Text</p>
+            <h4 class="card-title">Old School Social Friend Finder</h4>
+            <p class="card-text">Welcom to the exclusive friend finding app. We only accpet the best of the best, so goo luck!<br> All you have to do is go through our state-of-the-art screening process. 
+              Once we have your answers we use a our top tested algorithm to find you your new best friend for life.<br>
+            Get ready for the good times!!  </p>
 
 
             <div class="text-center">
@@ -37,8 +39,7 @@
 
     </footer>
       
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+ 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
