--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -137,10 +137,31 @@
 
 </div>
 
+<div id="bestFriendModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h3 class="modal-title">Your New Best Friend</h1>
+        </div>
+        <div class="modal-body">
+          <h2 id="bestFriend"></h2>
+          <img id="bestFriendPhoto" src="#">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <br>
 
 <footer>
     <div class="container">
+      <a href="/public/home.html">Home</a>
+      <span>|</span>
       <a href="/api/friends">Discover Friends API</a>
       <span>|</span>
       <a href="https://github.com/PENA5/friend-finder">GitHub Repo</a>
@@ -148,8 +169,7 @@
     </div>
   </footer>
       
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -191,7 +211,7 @@
 				$("#bestFriendModal").modal("toggle");
 			});
 		} else {
-			// If a required field is missing, show alert
+			// If a survey not complete, show alert
 			alert("Survey is incomplete!");
 		}
 	});
