--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <div class="card">
+    <div class="card text-center">
         <div class="card-header" text="center">
             Find A Friend
         </div>
@@ -23,7 +23,7 @@
 
 
             <div class="text-center">
-                <a href="/survey"><button class="btn btn-lg btn-success">Take Survey</button></a>
+                <a href="/survey"><button class="btn btn-lg btn-primary">Take Survey</button></a>
               </div>
 
         </div>
