--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -30,100 +30,100 @@
 
         
    <div class="form-group">
-     <label for="">Question #1</label>
+     <label for="">Enjoy to drink alcohol socially?</label>
      <select class="form-control" name="" id="question1">
           <option value="empty"></option>
-           <option value="1">1 (least like you)<option>
+           <option value="1">1 (least like you)</option>
            <option value="2">2</option>
            <option value="3">3</option>
            <option value="4">4</option>
            <option value="5">5 (most like you)</option>
        </select>
 
-       <label for="">Question #2</label>
+       <label for="">I am good with Money?</label>
        <select class="form-control" name="" id="question2">
             <option value="empty"></option>
-             <option value="1">1 (least like you)<option>
+             <option value="1">1 (least like you)</option>
              <option value="2">2</option>
              <option value="3">3</option>
              <option value="4">4</option>
              <option value="5">5 (most like you)</option>
          </select>
 
-         <label for="">Question #3</label>
+         <label for="">I enjoy hitting the gym?</label>
          <select class="form-control" name="" id="question3">
               <option value="empty"></option>
-               <option value="1">1 (least like you)<option>
+               <option value="1">1 (least like you)</option>
                <option value="2">2</option>
                <option value="3">3</option>
                <option value="4">4</option>
                <option value="5">5 (most like you)</option>
            </select>
 
-           <label for="">Question #4</label>
+           <label for="">I like to read as a hobby?</label>
            <select class="form-control" name="" id="question4">
                 <option value="empty"></option>
-                 <option value="1">1 (least like you)<option>
+                 <option value="1">1 (least like you)</option>
                  <option value="2">2</option>
                  <option value="3">3</option>
                  <option value="4">4</option>
                  <option value="5">5 (most like you)</option>
              </select>
 
-             <label for="">Question #5</label>
+             <label for="">I enjoy a good party?</label>
              <select class="form-control" name="" id="question5">
                   <option value="empty"></option>
-                   <option value="1">1 (least like you)<option>
+                   <option value="1">1 (least like you)</option>
                    <option value="2">2</option>
                    <option value="3">3</option>
                    <option value="4">4</option>
                    <option value="5">5 (most like you)</option>
                </select>
 
-               <label for="">Question #6</label>
+               <label for="">I always speak my mind?</label>
                <select class="form-control" name="" id="question6">
                     <option value="empty"></option>
-                     <option value="1">1 (least like you)<option>
+                     <option value="1">1 (least like you)</option>
                      <option value="2">2</option>
                      <option value="3">3</option>
                      <option value="4">4</option>
                      <option value="5">5 (most like you)</option>
                  </select>
 
-                 <label for="">Question #7</label>
+                 <label for="">Do well with the opposite sex?</label>
                  <select class="form-control" name="" id="question7">
                       <option value="empty"></option>
-                       <option value="1">1 (least like you)<option>
+                       <option value="1">1 (least like you)</option>
                        <option value="2">2</option>
                        <option value="3">3</option>
                        <option value="4">4</option>
                        <option value="5">5 (most like you)</option>
                    </select>
 
-                   <label for="">Question #8</label>
+                   <label for="">Have a nickname you are proud of?</label>
                    <select class="form-control" name="" id="question8">
                         <option value="empty"></option>
-                         <option value="1">1 (least like you)<option>
+                         <option value="1">1 (least like you)</option>
                          <option value="2">2</option>
                          <option value="3">3</option>
                          <option value="4">4</option>
                          <option value="5">5 (most like you)</option>
                      </select>
 
-                     <label for="">Question #9</label>
+                     <label for="">I enjoy good music?</label>
                      <select class="form-control" name="" id="question9">
                           <option value="empty"></option>
-                           <option value="1">1 (least like you)<option>
+                           <option value="1">1 (least like you)</option>
                            <option value="2">2</option>
                            <option value="3">3</option>
                            <option value="4">4</option>
                            <option value="5">5 (most like you)</option>
                        </select>
 
-                       <label for="">Question #10</label>
+                       <label for="">Always down for jello wrestling?</label>
                        <select class="form-control" name="" id="question10">
                             <option value="empty"></option>
-                             <option value="1">1 (least like you)<option>
+                             <option value="1">1 (least like you)</option>
                              <option value="2">2</option>
                              <option value="3">3</option>
                              <option value="4">4</option>
